--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="board">
+        <div class="top-left"></div>
+        <div class="top-middle"></div>
+        <div class="top-right"></div>
+
+        <div class="middle-left"></div>
+        <div class="middle-middle"></div>
+        <div class="middle-right"></div>
+
+        <div class="bottom-left"></div>
+        <div class="bottom-middle"></div>
+        <div class="bottom-right"></div>
+    </div>
     
     <script src="index.js"></script>
 </body>
