Allow players to put in their names

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="input-container">
+            <label for="userName1">Player A:</label>
+            <input type="text" name="userName1" id="userName1" value="Rocky">
+        </div>
+
+        <div class="input-container">
+            <label for="userName2">Player B:</label>
+            <input type="text" name="userName2" id="userName2" value="Milky Way">
+        </div>
+    </header>
+
     <div class="board">
         <div class="top-left"></div>
         <div class="top-middle"></div>
