Add restart button

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <div class="input-container">
-            <label for="userName1">Player A:</label>
+            <label for="userName1">Player X:</label>
             <input type="text" name="userName1" id="userName1" value="Rocky">
         </div>
 
         <div class="input-container">
-            <label for="userName2">Player B:</label>
+            <label for="userName2">Player O:</label>
             <input type="text" name="userName2" id="userName2" value="Milky Way">
         </div>
     </header>
@@ -32,6 +32,8 @@
         <div class="bottom-middle"></div>
         <div class="bottom-right"></div>
     </div>
+
+    <button id="restartBtn">Restart</button>
     
     <script src="index.js"></script>
 </body>
