Add a display element that announces the result

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <header>
-        <div class="input-container">
-            <label for="userName1">Player X:</label>
-            <input type="text" name="userName1" id="userName1" value="Rocky">
+        <div class="user-names">
+            <div class="input-container">
+                <label for="userName1">Player X:</label>
+                <input type="text" name="userName1" id="userName1" value="Rocky">
+            </div>
+
+            <div class="input-container">
+                <label for="userName2">Player O:</label>
+                <input type="text" name="userName2" id="userName2" value="Milky Way">
+            </div>
         </div>
 
-        <div class="input-container">
-            <label for="userName2">Player O:</label>
-            <input type="text" name="userName2" id="userName2" value="Milky Way">
-        </div>
+        <h1 id="announceResult"></h1>
     </header>
 
     <div class="board">
