Add a button to determine the user as an AI

--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
             </div>
 
             <div class="input-container">
+                <label for="isXAi">AI:</label>
+                <input type="checkbox" name="isXAi" id="isXAi">
+            </div>
+
+            <div class="input-container">
                 <label for="userName2">Player O:</label>
                 <input type="text" name="userName2" id="userName2" value="Milky Way">
+            </div>
+
+            <div class="input-container">
+                <label for="isOAi">AI:</label>
+                <input type="checkbox" name="isOAi" id="isOAi">
             </div>
         </div>
 
